Fix padlock icon alignment

--- a/apps/system/style/lockscreen.css
+++ b/apps/system/style/lockscreen.css
@@ -142,7 +142,7 @@
 }
 
 #lockscreen.low-power .icon-container > .icon {
-  translate: 0 5rem;
+  translate: 0 1.5rem;
   background-color: rgba(255, 255, 255, 0.6);
 }
 
